--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-easy-swipe": "^0.0.23",
-    "react-icons": "^5.4.0"
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
